@@ -1442,16 +1442,18 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,109,123,10
 END
 
-IDD_PROPGATE_PHYSICS DIALOGEX 0, 0, 125, 52
+IDD_PROPGATE_PHYSICS DIALOGEX 0, 0, 125, 62
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     EDITTEXT        11,74,7,44,12,ES_AUTOHSCROLL
     EDITTEXT        12,74,21,44,12,ES_AUTOHSCROLL
-    CONTROL         "",2146,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,52,36,8,8
-    LTEXT           "&Elasticity",-1,7,9,44,8
-    LTEXT           "&Friction",-1,7,23,44,8
-    LTEXT           "Collidable",-1,7,36,40,8
+    CONTROL         "",2146,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,52,36,9,10
+    LTEXT           "&Elasticity",IDC_STATIC,7,9,44,8
+    LTEXT           "&Friction",IDC_STATIC,7,23,44,8
+    LTEXT           "Collidable",IDC_STATIC,7,36,40,8
+    CONTROL         "",IDC_TWO_WAY_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,52,47,9,10
+    LTEXT           "Two Way",IDC_STATIC,7,47,32,8
 END
 
 IDD_DEBUGGER DIALOGEX 0, 0, 346, 204
@@ -1794,6 +1796,11 @@ BEGIN
     IDD_PROPBACKGLASS_VISUALS, DIALOG
     BEGIN
         BOTTOMMARGIN, 185
+    END
+
+    IDD_PROPGATE_PHYSICS, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 59
     END
 
     IDD_PROPKICKER_STATE, DIALOG
